RESOLVED FIXED 246964
[LFC][IFC] LineBoxBuilder::setLayoutBounds should not call setAscentAndDescent
https://bugs.webkit.org/show_bug.cgi?id=246964
Summary [LFC][IFC] LineBoxBuilder::setLayoutBounds should not call setAscentAndDescent
alan
Reported 2022-10-24 14:53:32 PDT
ssia
Attachments
Patch (7.22 KB, patch)
2022-10-24 14:58 PDT, alan
no flags
Patch (7.75 KB, patch)
2022-10-25 09:43 PDT, alan
no flags
Patch (15.13 KB, patch)
2022-10-25 10:10 PDT, alan
no flags
Patch (7.75 KB, patch)
2022-10-25 12:34 PDT, alan
no flags
alan
Comment 1 2022-10-24 14:58:50 PDT
alan
Comment 2 2022-10-25 09:43:35 PDT
alan
Comment 3 2022-10-25 10:10:30 PDT
alan
Comment 4 2022-10-25 12:34:11 PDT
EWS
Comment 5 2022-10-26 10:12:12 PDT
Committed 256023@main (e48a49d4713e): <https://commits.webkit.org/256023@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 463233 [details].
Radar WebKit Bug Importer
Comment 6 2022-10-26 10:13:24 PDT
Note You need to log in before you can comment on or make changes to this bug.