[LFC][IFC] LineBoxBuilder::setLayoutBounds should not call setAscentAndDescent https://bugs.webkit.org/show_bug.cgi?id=246964

Reviewed by Antti Koivisto.

This is in preparation for support line-box-contain.
(setLayoutBounds should really just compute and set the layout bounds).

* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxBuilder.cpp:
(WebCore::Layout::LineBoxBuilder::setLayoutBounds const):
(WebCore::Layout::LineBoxBuilder::constructInlineLevelBoxes):
(WebCore::Layout::LineBoxBuilder::adjustIdeographicBaselineIfApplicable):

Canonical link: https://commits.webkit.org/256023@main